--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div class="container">
-  <h1 class="text-center">Hola, Bootstrap 5.2 en Angular!</h1>
-  <button class="btn btn-primary">
-    <i class="bi bi-alarm"></i> Alarma
-  </button>
-</div>
+<router-outlet></router-outlet>
