Se crea spinner de carga y se aplica a las pantallas de lista de empleados y añadir empleados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
 <router-outlet></router-outlet>
+@if(showSpinner()){
+<div class="spinner-container">
+    <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+</div>
+}
