--- a/src/app/domains/employee/pages/list-employee/list-employee.component.html
+++ b/src/app/domains/employee/pages/list-employee/list-employee.component.html
@@ -46,7 +46,7 @@
                         <td>
                             <!-- Botones de Acción -->
                             <button class="btn btn-warning btn-sm me-2"><i class="bi bi-pencil"></i></button>
-                            <button class="btn btn-danger btn-sm"><i class="bi bi-trash3"></i></button>
+                            <button class="btn btn-danger btn-sm" (click)="deleteEmployee(employee.id)"><i class="bi bi-trash3"></i></button>
                         </td>
                     </tr>
                     }
