--- a/src/app/domains/employee/pages/add-employee/add-employee.component.css
+++ b/src/app/domains/employee/pages/add-employee/add-employee.component.css
@@ -55,3 +55,15 @@ h1 {
     margin-top: 5px;
     text-align: start;
 }
+
+.imageContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img{
+    width: 200px;
+    height: auto;
+}
+
