--- a/src/app/domains/employee/pages/update-employee/update-employee.component.css
+++ b/src/app/domains/employee/pages/update-employee/update-employee.component.css
@@ -55,3 +55,19 @@ h1 {
     margin-top: 5px;
     text-align: start;
 }
+
+.disabled{
+    background-color: rgb(221, 221, 221);
+}
+
+
+.imageContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img{
+    width: 200px;
+    height: auto;
+}
