--- a/src/app/domains/employee/pages/update-employee/update-employee.component.html
+++ b/src/app/domains/employee/pages/update-employee/update-employee.component.html
@@ -13,11 +13,12 @@
     <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()" class="shadow p-4 bg-white rounded">
         <div class="row">
             <div class="col-md-6 mb-3">
+                <label for="id" class="form-label">Id</label>
+                <input readonly id="id"  formControlName="id" class="form-control disabled" type="number" required >
+            </div>
+            <div class="col-md-6 mb-3">
                 <label for="cedula" class="form-label">Cédula</label>
-                <input  readonly id="cedula" [class.invalid]="employeeForm.get('cedula')!.invalid && employeeForm.get('cedula')!.touched"  formControlName="cedula" class="form-control" type="number" placeholder="Ingrese la cédula" required >
-                @if (employeeForm.get('cedula')!.invalid && employeeForm.get('cedula')!.touched) {
-                    <div class="error-message">cedula es requerido</div>
-                }
+                <input readonly id="cedula"  formControlName="cedula" class="form-control disabled" type="number"  required >
             </div>
             <div class="col-md-6 mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
@@ -38,16 +39,21 @@
                     <div class="error-message">Cargo es requerido</div>
                 }
             </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="fechaIngreso" class="form-label">Fecha Ingreso</label>
+                <input readonly id="fechaIngreso"  formControlName="fechaIngreso" class="form-control disabled" type="text"  required >
+            </div>
+
             <div class="col-md-6 mb-3">
                 
                 <label for="foto" class="form-label">Foto</label>
-                <!-- <input id="foto" type="file" (change)="onFileChange($event)" class="form-control" accept="image/*">
+                <input id="foto" type="file" (change)="onFileChange($event)" class="form-control" accept="image/*">
                 @if(imagePreview){
-                    <div class="mt-3">
+                    <div class="mt-3 imageContainer">
                         <img [src]="imagePreview" alt="Vista previa de la imagen" class="img-fluid rounded">
                     </div>
-                } -->
-                
+                }     
             </div>
         </div>
         <div class="text-center">
